--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Reem+Kufi:wght@400..700&display=swap');
 /*Asterisk wildcard selector to override default styles added by the browser*/
 * {
     margin: 0;
@@ -11,8 +13,7 @@ body {
     flex-direction: column;
     /*Generic project styles */
     color: #3a3a3a;
-
-
+    font-family: 'Reem Kufi', sans-serif;
 }
 
 /*Header*/
