--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,9 +28,16 @@ header {
 
 
 }
+header a {
+    text-decoration: none;
+    color: inherit;
+}
 
 h1 {
     font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
 }
 /*Main content*/
 main {
