Add spaces between list items

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,12 +39,26 @@ h1 {
     letter-spacing: 2px;
     color: #252525;
 }
+
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+    list-style-type: none;
+}
+#menu li {
+
+    margin-right: 1rem;
+}
+.active {
+    border-bottom: 1px solid #3a3a3a;
+}
 /*Main content*/
 main {
     background-color: lightblue;
     /*Make main element take up any surplus space to push footer down*/
     flex: 1 0 auto;
 }
+
 
 /*Footer*/
 footer {
