Style nav bar dropdown menu and set to hidden

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,67 +1,72 @@
 /* Google fonts import */
-@import url('https://fonts.googleapis.com/css2?family=Reem+Kufi:wght@400..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Reem+Kufi:wght@400..700&display=swap");
 /*Asterisk wildcard selector to override default styles added by the browser*/
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 /*Body*/
 body {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    /*Generic project styles */
-    color: #3a3a3a;
-    font-family: 'Reem Kufi', sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  /*Generic project styles */
+  color: #3a3a3a;
+  font-family: "Reem Kufi", sans-serif;
 }
 
 /*Header*/
 header {
-    background-color: #ffffff;
-    padding: 0 1rem;
-    position: fixed;
-    z-index: 99;
-    width: 100%;
-    box-shadow: 0 2px 2px #3a3a3a;
-
-
-
+  background-color: #ffffff;
+  padding: 0 1rem;
+  position: fixed;
+  z-index: 99;
+  width: 100%;
+  box-shadow: 0 2px 2px #3a3a3a;
 }
 header a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 h1 {
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #252525;
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: #252525;
 }
 
 #menu {
-    font-size: 110%;
-    letter-spacing: 4px;
-    list-style-type: none;
+  font-size: 110%;
+  letter-spacing: 4px;
+  list-style-type: none;
 }
 #menu li {
-
-    margin-right: 1rem;
+  margin-right: 1rem;
 }
 .active {
-    border-bottom: 1px solid #3a3a3a;
+  border-bottom: 1px solid #3a3a3a;
 }
-/*Main content*/
-main {
-    background-color: lightblue;
-    /*Make main element take up any surplus space to push footer down*/
-    flex: 1 0 auto;
+/*Navbar styles with dropdown toggle*/
+nav {
+  position: absolute;
+  background-color: #ffffff;
+  width: 100%;
+  left: 0;
+  padding: 0 1rem;
+  box-shadow: 0 2px 2px #3a3a3a;
+  display: none;
 }
 
+/*Main content*/
+main {
+  background-color: lightblue;
+  /*Make main element take up any surplus space to push footer down*/
+  flex: 1 0 auto;
+}
 
 /*Footer*/
 footer {
-    background-color: orange
+  background-color: orange;
 }
-
