--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,3 +107,15 @@ footer {
 .nav-toggle-label {
     display: none;
 }
+
+#logo {
+    font-size: 280%;
+    line-height: 75px;
+    margin: 0 0.5rem;
+}
+
+/*Main content*/
+main {
+    /* Push main content to accomodate larger header */
+    margin-top: 75px;
+}
