--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,3 +119,13 @@ main {
     /* Push main content to accomodate larger header */
     margin-top: 75px;
 }
+}
+
+/* Media query: laptopsand larger (992px and up) */
+@media screen and (min-width: 992px) {
+/*Menu*/
+#menu a:hover {
+    border-bottom: 1px solid #3a3a3a;
+}
+    
+}
