--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,95 +1,120 @@
-/* Google fonts import */
-@import url("https://fonts.googleapis.com/css2?family=Reem+Kufi:wght@400..700&display=swap");
-/*Asterisk wildcard selector to override default styles added by the browser*/
+;
+  /* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
+
+/* Asterisk wildcard selector to override default styles added by the browser */
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
-/*Body*/
+
+/* General styles */
 body {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  /*Generic project styles */
-  color: #3a3a3a;
-  font-family: "Reem Kufi", sans-serif;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* Generic project styles */
+    color: #3a3a3a;
+    font-family: 'Lato', sans-serif;
 }
 
-/*Header*/
+h1, h2, h3 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
+}
+
+/* Header */
 header {
-  background-color: #ffffff;
-  padding: 0 1rem;
-  position: fixed;
-  z-index: 99;
-  width: 100%;
-  box-shadow: 0 2px 2px #3a3a3a;
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-}
-header a {
-  text-decoration: none;
-  color: inherit;
+    background-color: #ffffff;
+    padding: 0 1rem;
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 }
 
-h1 {
-  font-family: "Oswald", sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  color: #252525;
+header a {
+    text-decoration: none;
+    color: inherit;
 }
 
 #menu {
-  font-size: 110%;
-  letter-spacing: 4px;
-  list-style-type: none;
-}
-#menu li {
-  margin-right: 1rem;
-}
-.active {
-  border-bottom: 1px solid #3a3a3a;
-}
-/*Navbar styles with dropdown toggle*/
-nav {
-  position: absolute;
-  background-color: #ffffff;
-  width: 100%;
-  left: 0;
-  padding: 0 1rem;
-  box-shadow: 0 2px 2px #3a3a3a;
-  display: none;
-  top: 100%
+    font-size: 110%;
+    letter-spacing: 4px;
+    list-style-type: none;
 }
 
-/*Nav toggle*/
-#nav-toggle:checked ~ nav {
-  display: block;
+#menu > li {
+    margin-bottom: 1em;
 }
+
+.active {
+    border-bottom: 1px solid #3a3a3a;
+}
+
+/* Navbar styles with dropdown toggle */
+nav {
+    position: absolute;
+    background-color: #ffffff;
+    width: 100%;
+    left: 0;
+    padding: 0 1rem;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display: none;
+    top: 100%;
+}
+
+/* Nav toggle */
+#nav-toggle:checked~nav {
+    display: block;
+}
+
 #nav-toggle {
     display: none;
 }
+
 .nav-toggle-label {
-  font-size: 2rem;
+    font-size: 2rem;
 }
 
-/*Main content*/
+/* Main content */
 main {
-  /*Make main element take up any surplus space to push footer down*/
-  flex: 1 0 auto;
-  margin-top: 47px;
+    /* Make main element take up any surplus space to push footer down */
+    flex: 1 0 auto;
+    margin-top: 47px;
 }
-/*Hero section*/
+
+/* Hero section */
 #hero {
     height: 600px;
     width: 100%;
     background: url("../images/hero-image.webp") no-repeat center center/cover;
-
-
+    position: relative;
 }
 
-/*Footer*/
+#cover-text {
+    /* Final rgba value sets the opacity so it is semi-transparent */
+    background-color: rgba(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text > h2, #cover-text > h3 {
+    color: #ffffff;
+}
+
+/* Footer */
 #social-networks {
     text-align: center;
     padding: 20px 0;
@@ -98,57 +123,57 @@ main {
     list-style-type: none;
 }
 
-#social-networks li {
-    display: inline-block; 
-}
-
 #social-networks i {
-font-size: 160%;
-padding: 5%;
-color: #3a3a3a;
-}
-
+    font-size: 160%;
+    padding: 5%;
+    color: #3a3a3a;
 }
 
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
- /*Header*/
- nav {
-    display: block;
-    position: relative;
-    box-shadow: none;
-    width: fit-content;
-    padding-right: 1rem;
-}
-#menu {
-    display: flex;
+    /* Header */
+    nav {
+        display: block;
+        position: relative;
+        box-shadow: none;
+        width: fit-content;
+        padding-right: 1rem;
+    }
+
+    #menu {
+        display: flex;
+    }
+
+    #menu > li {
+        padding-left: 1rem;
+    }
+
+    .nav-toggle-label {
+        display: none;
+    }
+
+    #logo {
+        font-size: 280%;
+        line-height: 75px;
+        margin: 0 0.5rem;
+    }
+
+    /* Main content */
+    main {
+        /* Push main content down to accommodate larger header */
+        margin-top: 79px;
+    }
+
+    /* Hero image */
+    #cover-text {
+        width: 300px;
+        right: 50px;
+    }
 }
 
-#menu li {
-    padding-left: 1rem;
-}
-.nav-toggle-label {
-    display: none;
-}
-
-#logo {
-    font-size: 280%;
-    line-height: 75px;
-    margin: 0 0.5rem;
-}
-
-/*Main content*/
-main {
-    /* Push main content to accomodate larger header */
-    margin-top: 75px;
-}
-}
-
-/* Media query: laptopsand larger (992px and up) */
+/* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
-/*Menu*/
-#menu a:hover {
-    border-bottom: 1px solid #3a3a3a;
-}
-    
+    #menu a:hover{
+        border-bottom: 1px solid #3a3a3a;
+    }
 }
