Add circular image to reasons section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,6 +139,23 @@ hr {
     border-top: 1px solid #3a3a3a;
     margin: 5px 0;
 }
+
+#circle-cover-bg {
+    background: url("../images/reasons-image.webp") no-repeat center center/cover;
+    height: 90vw;
+    width: 90vw;
+    margin-bottom: 20px;
+    /* Circle cover background */
+    border-radius: 50%;
+    max-height: 300px;
+    max-width: 300px;
+}
+
+#benefits-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 /* Footer */
 #social-networks {
     text-align: center;
